# tiny_template

./: CMakeLists.txt  README.md  tiny_template.vix  vix.json
examples/: hello.cpp  missing_keys.cpp  multiple_vars.cpp
include/tiny_template/: tiny_template.hpp
tests/: test_basic.cpp
